--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,17 @@
 [project]
 name = "mnist"
-version = "0.1.0"
+version = "0.2.0"
 description = "Default template for PDM package"
 authors = [
     {name = "sunwoo", email = "summerham22@gmail.com"},
 ]
-dependencies = []
+dependencies = [
+    "fastapi>=0.114.1",
+    "uvicorn[standard]>=0.30.6",
+    "python-multipart>=0.0.9",
+    "pymysql>=1.1.1",
+]
+
 requires-python = ">=3.11"
 readme = "README.md"
 license = {text = "MIT"}
