--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "uvicorn[standard]>=0.30.6",
     "python-multipart>=0.0.9",
     "pymysql>=1.1.1",
+    "jigeum>=1.0.2",
 ]
 
 requires-python = ">=3.11"
@@ -23,3 +24,6 @@ build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = true
+
+[tool.pytest.ini_options]
+pythonpath = "src"
