--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "python-multipart>=0.0.9",
     "pymysql>=1.1.1",
     "jigeum>=1.0.2",
+    "requests>=2.32.3",
 ]
 
 requires-python = ">=3.11"
