--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mnist"
-version = "0.4.6"
+version = "0.4.7"
 description = "Default template for PDM package"
 authors = [
     {name = "sunwoo", email = "summerham22@gmail.com"},
@@ -26,6 +26,10 @@ build-backend = "pdm.backend"
 [tool.pdm]
 distribution = true
 
+[tool.pdm.dev-dependencies]
+test = [
+    "pytest>=8.3.3",
+]
 [tool.pytest.ini_options]
 pythonpath = "src"
 
