--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mnist"
-version = "0.5.3"
+version = "0.6.0"
 description = "Default template for PDM package"
 authors = [
     {name = "sunwoo", email = "summerham22@gmail.com"},
@@ -12,6 +12,12 @@ dependencies = [
     "pymysql>=1.1.1",
     "jigeum>=1.0.2",
     "requests>=2.32.3",
+    "keras>=3.5.0",
+    "matplotlib>=3.9.2",
+    "scikit-learn>=1.5.2",
+    "scikit-image>=0.24.0",
+    "opencv-python>=4.10.0.84",
+    "pydot>=3.0.1",
 ]
 
 requires-python = ">=3.11"
@@ -30,6 +36,11 @@ distribution = true
 test = [
     "pytest>=8.3.3",
 ]
+
+note = [
+    "notebook>=7.2.2",
+]
+
 [tool.pytest.ini_options]
 pythonpath = "src"
 
