--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,15 +12,16 @@ dependencies = [
     "pymysql>=1.1.1",
     "jigeum>=1.0.2",
     "requests>=2.32.3",
-    "keras>=3.5.0",
     "matplotlib>=3.9.2",
     "scikit-learn>=1.5.2",
     "scikit-image>=0.24.0",
     "opencv-python>=4.10.0.84",
     "pydot>=3.0.1",
+    "tensorflow==2.16.2",
+    "keras>=3.5.0",
 ]
 
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.12"
 readme = "README.md"
 license = {text = "MIT"}
 
@@ -36,7 +37,6 @@ distribution = true
 test = [
     "pytest>=8.3.3",
 ]
-
 note = [
     "notebook>=7.2.2",
 ]
